--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 /* Google Fonts - Poppins */
+/* Google Fonts - Poppins */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
 
 *{
@@ -13,7 +14,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #4070f4;
+    background-image: linear-gradient(to right,#42275a,#734b6d);
     column-gap: 30px;
 }
 .form{
@@ -22,7 +23,7 @@
     width: 100%;
     padding: 30px;
     border-radius: 6px;
-    background: #FFF;
+    background: transparent;
 }
 .form.signup{
     opacity: 0;
